--- a/style.css
+++ b/style.css
@@ -180,7 +180,7 @@ html {
     text-align: center;
     align-items: center;
     justify-items: center;
-    padding: 80px;
+    padding: 80px 0px;
     height: 200px;
     border-radius: 20px;
     cursor: pointer;
@@ -551,7 +551,7 @@ input:hover {
 @media only screen and (min-width: 801px) and (max-width: 1000px) {
 }
 /* --------------------------------------- */
-@media only screen and (max-width: 969px) {
+@media only screen and (max-width: 800px) {
     .icon-section a {
         font-size: 20px;
     }
