--- a/css/style.css
+++ b/css/style.css
@@ -562,7 +562,7 @@ input:hover {
 /* Medium devices (tablets,laptops, 601px to 1000px) */
 @media only screen and (min-width: 601px) and (max-width: 800px) {
 body {
-    background: url(images/diu.jpg) no-repeat left/cover fixed;
+    background: url(../images/diu.jpg) no-repeat left/cover fixed;
 }
 .nav-logo a {
     font-size: 20px;
@@ -720,7 +720,7 @@ input{
 @media only screen and (min-width: 450px) and (max-width: 600px) {
 
 body {
-    background: url(images/diu-mobile.jpg) no-repeat left/cover fixed;
+    background: url(../images/diu-mobile.jpg) no-repeat left/cover fixed;
 }
 .nav-logo a {
     font-size: 20px;
@@ -885,7 +885,7 @@ footer p {
 @media only screen and (max-width: 449px) {
 
 body {
-    background: url(images/diu-mobile.jpg) no-repeat left/cover fixed;
+    background: url(../images/diu-mobile.jpg) no-repeat left/cover fixed;
 }
 .nav-logo a {
     font-size: 20px;
